--- a/witcher/contracts/templates/contracts/contract_create_form.html
+++ b/witcher/contracts/templates/contracts/contract_create_form.html
@@ -1,6 +1,8 @@
 {% extends "./base.html" %}
 {% load static %}
-
+{% block page_css %}
+<link rel="stylesheet" href="{% static 'contracts/css/contract_form.css' %}">
+{% endblock %}
 {% block title %}
 Dodaj Zlecenie
 {% endblock %}
