--- a/witcher/contracts/static/contracts/css/contract_form.css
+++ b/witcher/contracts/static/contracts/css/contract_form.css
@@ -9,13 +9,13 @@ body{
     background-color: #0a0a0a;
 }
 .formcontainer{
-    min-height: 95vh;
+    min-height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #0a0a0a;
-
+    padding:100px 20px 20px;
 }
 .formhead{
     text-align: center;
