Added ContractDetailView to views.py , updated admin.py with corrected list_display, list_filter, search fields. Added new attribute to Contract in models.py - SlugField. Created new html - contract_detail.html to view details of contract. Updated profile.html and contract_list with a link to contract_detail.html. Added new path to urlpatterns to contractdetail.

--- a/witcher/contracts/static/contracts/css/contracts_list.css
+++ b/witcher/contracts/static/contracts/css/contracts_list.css
@@ -74,7 +74,13 @@
     font-size:0.95rem;
     font-weight: 600;
 }
-
+.contractlink{
+    color:#e8d4b0;
+    transition: color 0.3s ease;   
+}
+.contractlink:hover{
+    color:#8b7355;
+}
 @media (max-width:1200px){
     .contractslist{
         padding:100px 15px 30px;
